# Brokeout

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
Breakout/: Breakout.vcxproj  Breakout.vcxproj.filters  CMakeLists.txt  Camera.h  Game.cpp  Game.h  Main.cpp  cmake_install.cmake
Breakout/models/: Ball.cpp  Ball.h  Player.cpp  Player.h
